# gdlk

./: .env.example  .gitignore  213.bundle.js  285.bundle.js  33.bundle.js  356.bundle.js  550.bundle.js  805.bundle.js  805.bundle.js.LICENSE.txt  827.bundle.js  987.bundle.js  CNAME  Cargo.toml  LICENSE  README.md  api.Dockerfile  docker-compose.ci.yml  docker-compose.yml  docs.sh  index.html  initdb.sh  main.bundle.js  rust-toolchain  rust-toolchain.toml  test_socket.py  vendors.app.bundle.js  vendors.app.bundle.js.LICENSE.txt  x.py
.cargo/: config
.github/workflows/: ci.yml
api/: Cargo.toml  Dockerfile  Makefile.toml  diesel.toml  dump.sh  initdb.sh  manage.py  openid_config.example.json  prd.Dockerfile  pyproject.toml  schema.graphql  start.sh
api/config/: default.json
api/core/: admin.py  fields.py  models.py  schema.py  serializers.py  util.py
api/core/migrations/: 0001_extensions.py  0001_initial.py  0002_initial.py  0003_rename_playersolution_puzzlesolution.py
api/core/schema/: mutations.py  queries.py
api/docker/: cmd.sh  entrypoint.sh  run_tests.sh
api/fixtures/: init.pg
api/gdlk_api/: asgi.py  schema.py  settings.py  urls.py  wsgi.py
api/migrations/2019-11-29-152439_create_environments/: down.sql  up.sql
api/migrations/2019-12-11-022628_create_hardware_specs_program_specs/: down.sql  up.sql
api/migrations/2020-01-27-230232_create_users/: down.sql  up.sql
api/migrations/2020-03-11-204852_init_models/: up.sql
api/migrations/2020-05-30-210416_init_db/: up.sql
api/migrations/2020-05-30-210421_init_models/: down.sql  up.sql
api/migrations/2020-07-25-172603_add_permission_models/: down.sql  up.sql
api/migrations/2020-08-20-010208_add_leaderboard_models/: up.sql
api/migrations/2020-10-05-003431_auto_slug/: down.sql  up.sql
api/migrations/2020-11-08-174607_trigger_users/: down.sql  up.sql
api/scripts/: cmd_dev.sh  docker.sh  start.sh
api/seeds/: seed.sql
api/src/: bin.rs  config.rs  error.rs  gql.rs  lib.rs  main.rs  manage.py  models.rs  schema.patch  schema.rs  seed.rs  util.rs
api/src/gdlk/: asgi.py  settings.py  urls.py  wsgi.py
api/src/lang/: apps.py  ast.rs  delabel.rs  desugar.rs  machine.rs  mod.rs  parse.rs  serializers.py  urls.py  validate.rs  views.py
api/src/models/: env.rs  hardware.rs  hardware_spec.rs  lang.rs  mod.rs  permission.rs  program.rs  program_spec.rs  role.rs  role_permission.rs  sql_types.rs  user.rs  user_program.rs  user_program_pb.rs  user_program_record.rs  user_provider.rs  user_role.rs
api/src/server/: auth.rs  fs.rs  mod.rs  websocket.rs
api/src/server/gql/: hardware.rs  hardware_spec.rs  internal.rs  mod.rs  mutation.rs  program.rs  program_spec.rs  user.rs  user_program.rs  user_program_record.rs
api/src/util/: auth.rs  db.rs
api/src/vfs/: hardware.rs  internal.rs  mod.rs  program.rs
api/src/views/: context.rs  hardware_spec.rs  mod.rs  program_spec.rs  user.rs  user_program.rs
api/tests/: test_copy_user_program.rs  test_create_hardware_spec.rs  test_create_program_spec.rs  test_create_user_program.rs  test_delete_user_program.rs  test_execute_user_program.rs  test_graphql.rs  test_initialize_user.rs  test_query_auth_status.rs  test_query_hardware_spec.rs  test_query_node.rs  test_query_program_spec.rs  test_query_user.rs  test_update_hardware_spec.rs  test_update_program_spec.rs  test_update_user_program.rs  test_user_program_record.rs
api/tests/utils/: factories.rs  mod.rs
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: ast.rs  bin.rs  consts.rs  delabel.rs  desugar.rs  error.rs  lib.rs  machine.rs  models.rs  parse.rs  util.rs  validate.rs
core/tests/: compile_error.rs  runtime_error.rs  success.rs  test_compile_error.rs  test_success.rs
crates/: Cargo.toml  rust-toolchain.toml
crates/api/: Cargo.toml  Dockerfile  Dockerfile.dockerignore  prd.Dockerfile  prd.Dockerfile.dockerignore  schema.graphql
crates/api/config/: default.json  dev.example.json
crates/api/migrations/2020-05-30-210416_init_db/: down.sql  up.sql
crates/api/migrations/2020-07-25-172603_add_permission_models/: up.sql
crates/api/migrations/2020-08-20-010208_add_leaderboard_models/: down.sql  up.sql
crates/api/migrations/2020-11-08-174607_trigger_users/: down.sql  up.sql
crates/api/src/: bin.rs  config.rs  lib.rs  schema.rs
crates/api/src/models/: mod.rs  program_spec.rs  user.rs  user_program.rs  user_program_record.rs  user_provider.rs
crates/api/src/server/gql/: internal.rs  mod.rs  mutation.rs  program.rs  program_spec.rs  user.rs  user_program_record.rs
crates/api/src/util/: auth.rs  db.rs  mod.rs  tests.rs
crates/api/src/views/: context.rs  hardware_spec.rs  mod.rs  program_spec.rs  user.rs  user_program.rs
crates/api/tests/: test_copy_user_program.rs  test_create_program_spec.rs  test_delete_user_program.rs  test_execute_user_program.rs  test_query_auth_status.rs  test_query_hardware_spec.rs  test_query_node.rs  test_query_program_spec.rs  test_update_hardware_spec.rs  test_update_user_program.rs  test_user_program_record.rs
crates/api/tests/utils/: mod.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: ast.rs  consts.rs  delabel.rs  error.rs  lib.rs  machine.rs  models.rs  parse.rs  util.rs  validate.rs
crates/core/tests/: test_compile_error.rs  test_runtime_error.rs  test_success.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
crates/wasm/tests/: test_wasm.rs
deploy/: Makefile.toml  dev.env  docker-stack.yml  load_secrets.sh  prd.env
docs/: websocket.md
fixtures/: env.sql
frontend/: .eslintignore  .eslintrc.js  Dockerfile  Dockerfile.dockerignore  config-overrides.js  favicon.py  package-lock.json  package.json  prd.Dockerfile  relay.config.js  tsconfig.json  webpack.config.js
lib/: Cargo.toml
nginx/: Dockerfile  Dockerfile.dockerignore  cmd.sh  entrypoint.sh  nginx.conf
postgres/: Dockerfile  init_template1.sh
server/: Cargo.toml  test_socket.py
server/src/: main.rs  websocket.rs
wasm/: Cargo.toml  Makefile.toml
wasm/src/: lib.rs
wasm/tests/: test_wasm.rs
(+174 files in other folders)
