[package]
name = "gdlk_api"
version = "0.1.0"
authors = [
    "John Reilly Murray <johnreillymurray@gmail.com>",
    "Lucas Pickering <lucas@lucaspickering.me>",
]
edition = "2018"

[dependencies]
actix = "0.9"
actix-web = "2.0"
actix-web-actors = "2.0"
actix-rt = "1.0"
diesel = { version = "1.4", features = ["postgres", "r2d2"] }
env_logger = "0.7"
failure = "0.1"
gdlk = { path = "../core" }
juniper = "0.14"
lazy_static = "1.4"
r2d2 = "0.8"
regex = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
