[package]
name = "gdlk_api"
version = "0.1.0"
authors = [
    "John Reilly Murray <johnreillymurray@gmail.com>",
    "Lucas Pickering <lucas@lucaspickering.me>",
]
edition = "2018"

[dependencies]
actix = "0.9"
actix-web = "2.0"
actix-web-actors = "2.0"
actix-rt = "1.0"
diesel = { version = "^1.4.3", features = ["postgres", "r2d2", "uuidv07"] }
env_logger = "0.7"
failure = "0.1"
gdlk = { path = "../core" }
juniper = "0.14.2"
juniper-from-schema = "0.5.2"
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = "^0.7.0"
validator = "0.10.0"
validator_derive = "0.10.0"

[dev-dependencies]
maplit = "^1.0.0"

[lib]
name = "gdlk_api"
path = "src/lib.rs"

[[bin]]
name = "gdlk_api"
path = "src/bin.rs"
