[package]
name = "gdlk_api"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/LucasPickering/gdlk"
authors = [
    "John Reilly Murray <johnreillymurray@gmail.com>",
    "Lucas Pickering <lucas@lucaspickering.me>",
]
edition = "2018"
description = "HTTP API to run the entire GDLK site."

[dependencies]
actix = "0.9"
actix-identity = "0.2.1"
actix-web = { version = "2.0", features = ["openssl"] }
actix-web-actors = "2.0"
actix-rt = "1.0"
base64 = "^0.12.0"
chrono = "0.4"
config = { version = "0.10", default-features = false, features = ["json"] }
diesel = { version = "^1.4.3", default-features = false, features = ["chrono", "postgres", "r2d2", "uuidv07"] }
env_logger = "0.7"
gdlk = { path = "../core" }
juniper = { version = "0.14.2", default-features = false, features = ["chrono"] }
# juniper-from-schema = "0.5.2"
juniper-from-schema = { git = "https://github.com/LucasPickering/juniper-from-schema", branch = "fragment-bug-workaround" }
log = "^0.4.8"
openidconnect = { git = "https://github.com/ramosbugs/openidconnect-rs", branch = "main", default-features = false }
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = "^0.7.0"
validator = "0.10.1"
validator_derive = "0.10.1"

[dev-dependencies]
maplit = "^1.0.0"

[lib]
name = "gdlk_api"
path = "src/lib.rs"

[[bin]]
name = "gdlk_api"
path = "src/bin.rs"
