[package]
name = "gdlk_cli"
version = "0.1.0"
authors = [
    "John Reilly Murray <johnreillymurray@gmail.com>",
    "Lucas Pickering <lucas@lucaspickering.me>",
]
edition = "2018"
description = "Small CLI utility for compiling and running GDLK programs"

[dependencies]
failure = "0.1"
gdlk = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
