[package]
name = "gdlk_cli"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/LucasPickering/gdlk"
authors = [
    "John Reilly Murray <johnreillymurray@gmail.com>",
    "Lucas Pickering <lucas@lucaspickering.me>",
]
edition = "2018"
description = "Small CLI utility for compiling and running GDLK programs"

[dependencies]
anyhow = "1.0"
gdlk = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
