[package]
name = "gdlk"
version = "0.1.0"
authors = [
    "John Reilly Murray <johnreillymurray@gmail.com>",
    "Lucas Pickering <lucas@lucaspickering.me>",
]
edition = "2018"

[features]
wasm = ["wasm-bindgen"]

[dependencies]
failure = "0.1"
nom = "5.1.1"
nom_locate = "2.0"
serde = { version = "1.0", features = ["derive"] }
# validator = "0.10.0"
# validator_derive = "0.10.0"
validator = { git = "https://github.com/LucasPickering/validator", branch = "blanket-ref-impl" }
validator_derive = { git = "https://github.com/LucasPickering/validator", branch = "blanket-ref-impl" }

[dependencies.wasm-bindgen]
version = "0.2.58"
features = ["serde-serialize"]
optional = true
