[package]
name = "gdlk"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/LucasPickering/gdlk"
authors = [
    "John Reilly Murray <johnreillymurray@gmail.com>",
    "Lucas Pickering <lucas@lucaspickering.me>",
]
edition = "2018"
description = "Implementation of the GDLK language."

[features]
wasm = ["wasm-bindgen"]

[dependencies]
failure = "0.1"
nom = "5.1.1"
nom_locate = "2.0"
serde = { version = "1.0", features = ["derive"] }

[dependencies.wasm-bindgen]
version = "0.2.58"
features = ["serde-serialize"]
optional = true
