[package]
name = "gdlk_wasm"
version = "0.1.0"
authors = [
    "John Reilly Murray <johnreillymurray@gmail.com>",
    "Lucas Pickering <lucas@lucaspickering.me>",
]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
# We use wasm-pack for tests instead of cargo
test = false

[dependencies]
gdlk = { path = "../core", features = ["wasm"] }
wasm-bindgen = { version = "0.2.62", features = ["serde-serialize"] }
serde = "^1.0.59"
serde_derive = "^1.0.59"

[dev-dependencies]
maplit = "^1.0.0"
wasm-bindgen-test = "0.3.12"
