[package]
authors = [
  "John Reilly Murray <johnreillymurray@gmail.com>",
  "Lucas Pickering <lucas@lucaspickering.me>",
]
description = "Webassembly bindings for the GDLK core crate"
edition = "2018"
license = "MIT"
name = "gdlk_wasm"
repository = "https://github.com/LucasPickering/gdlk"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]
# We use wasm-pack for tests instead of cargo
test = false

[dependencies]
gdlk = {path = "../core", features = ["wasm"]}
serde = "^1.0.59"
serde_derive = "^1.0.59"
wasm-bindgen = {version = "0.2.62", features = ["serde-serialize"]}

[dev-dependencies]
maplit = "^1.0.0"
wasm-bindgen-test = "0.3.12"


[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
