[package]
authors = [
  "John Reilly Murray <johnreillymurray@gmail.com>",
  "Lucas Pickering <lucas@lucaspickering.me>",
]
description = "HTTP API to run the entire GDLK site."
edition = "2018"
license = "MIT"
name = "gdlk_api"
repository = "https://github.com/LucasPickering/gdlk"
version = "0.1.0"

[dependencies]
actix = "0.9"
actix-identity = "0.2.1"
actix-rt = "1.0"
actix-web = {version = "2.0", features = ["openssl"]}
actix-web-actors = "2.0"
base64 = "^0.12.0"
chrono = "0.4"
config = {version = "0.10", default-features = false, features = ["json"]}
diesel = {version = "^1.4.6", default-features = false, features = ["chrono", "postgres", "r2d2", "uuidv07"]}
env_logger = "0.7"
futures = "0.3"
gdlk = {path = "../core"}
# Go back to stable once they release async support
# juniper = {version = "0.14.2", default-features = false, features = ["chrono"]}
juniper = {git = "https://github.com/graphql-rust/juniper", branch = "master", default-features = false, features = ["chrono"]}
# juniper-from-schema = "0.5.2"
juniper-from-schema = {git = "https://github.com/davidpdrsn/juniper-from-schema", branch = "master"}
log = "^0.4.8"
openidconnect = {version = "2.0.0-alpha.1", default-features = false}
r2d2 = "0.8"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"
uuid = {version = "^0.8.0", default-features = false, features = ["serde"]}
validator = "0.10.1"
validator_derive = "0.10.1"

[dev-dependencies]
diesel-factories = "^1.0.1"
maplit = "^1.0.0"

[lib]
name = "gdlk_api"
path = "src/lib.rs"

[[bin]]
name = "gdlk_api"
path = "src/bin.rs"
