[package]
authors = [
  "John Reilly Murray <johnreillymurray@gmail.com>",
  "Lucas Pickering <lucas@lucaspickering.me>",
]
description = "Small CLI utility for compiling and running GDLK programs"
edition = "2018"
license = "MIT"
name = "gdlk_cli"
repository = "https://github.com/LucasPickering/gdlk"
version = "0.1.0"

[dependencies]
anyhow = "1.0.42"
gdlk = {path = "../core"}
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
structopt = "0.3.22"
