[package]
authors = [
  "John Reilly Murray <johnreillymurray@gmail.com>",
  "Lucas Pickering <lucas@lucaspickering.me>",
]
description = "Implementation of the GDLK language."
edition = "2018"
license = "MIT"
name = "gdlk"
repository = "https://github.com/LucasPickering/gdlk"
version = "0.1.0"

[features]
wasm = ["wasm-bindgen"]

[dependencies]
nom = "6.2.1"
nom_locate = "3.0.2"
serde = { version = "1.0.126", features = ["derive"] }
thiserror = "1.0.26"

[dependencies.wasm-bindgen]
features = ["serde-serialize"]
optional = true
version = "0.2.74"
