cargo-features = ["per-package-target"]

[package]
authors = [
  "John Reilly Murray <johnreillymurray@gmail.com>",
  "Lucas Pickering <lucas@lucaspickering.me>",
]
default-target = "wasm32-unknown-unknown"
description = "Webassembly bindings for the GDLK core crate"
edition = "2018"
license = "MIT"
name = "gdlk_wasm"
repository = "https://github.com/LucasPickering/gdlk"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]
# We use wasm-pack for tests instead of cargo
test = false

[dependencies]
gdlk = {path = "../core"}
serde = "1.0.126"
serde_derive = "1.0.126"
wasm-bindgen = {version = "0.2.74", features = ["serde-serialize"]}

[dev-dependencies]
maplit = "1.0.2"
wasm-bindgen-test = "0.3.24"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
